--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
-				<h1>To Do Items</h1>
+				<h1 id="title">To Do Items</h1>
 				<ul id="to-do-list" class="list-group">
 				</ul>
 				<button id="show-new-item-form" class="btn btn-success">+</button>
